--- a/ontoAPI/.classpath
+++ b/ontoAPI/.classpath
@@ -17,5 +17,8 @@
 	<classpathentry kind="lib" path="lib/commons-discovery-0.2.jar"/>
 	<classpathentry kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="lib/pellet/pellet-owlapi.jar"/>
+	<classpathentry kind="lib" path="lib/pellet/relaxngDatatype.jar"/>
+	<classpathentry kind="lib" path="lib/pellet/xsdlib.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
