Created a servlet version so one can make a web application. This is necessary because both the html pages and services should be on the same domain. Run the project (right-click, run, run on server) and then browse to http://localhost:8080/ontocat/test.html (look at the html source to see the AJAX action)
Note: Also added more jars. Need to weed out what is not needed.

git-svn-id: http://www.ontocat.org/svn/trunk@114 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT-restservice/.project
+++ b/ontoCAT-restservice/.project
@@ -3,6 +3,7 @@
 	<name>ontoCAT-restservice</name>
 	<comment></comment>
 	<projects>
+		<project>ontoCAT</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
