final version of the cached service, bound slf4j to log4j
git-svn-id: http://www.ontocat.org/svn/trunk@115 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/src/log4j.properties
+++ b/ontoCAT/src/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=OFF
 
+log4j.logger.net.sf.ehcache=ERROR, CONSOLE
 log4j.logger.uk.ac.ebi=INFO, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
