--- a/ontoCAT/src/log4j.properties
+++ b/ontoCAT/src/log4j.properties
@@ -4,4 +4,4 @@ log4j.logger.net.sf.ehcache=ERROR, CONSOLE
 log4j.logger.uk.ac.ebi=INFO, CONSOLE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-4r %-5p [%c] %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%C{1}] %m%n
