--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
-	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-bin.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-src.jar"/>
@@ -26,5 +25,7 @@
 	<classpathentry kind="lib" path="lib/ehcache-core-1.7.2/lib/slf4j-log4j12-1.5.11.jar"/>
 	<classpathentry kind="lib" path="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11-sources.jar"/>
 	<classpathentry kind="lib" path="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
