--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -3,9 +3,8 @@
 	<!-- set global properties for this build -->
 	<property name="test.reports" value="reports" />
 	<property name="version" value="0.9.3" />
-	<property name="copyright"
-	          value="Copyright © 2010 European Bioinformatics 
-		Institute and University of Groeningen. Released under LGPLv3." />
+	<property name="copyright" value="Copyright © 2010 European Bioinformatics 
+		Institute and University of Groningen. Released under LGPLv3." />
 
 	<!-- set class path -->
 	<path id="test.classpath">
@@ -29,30 +28,24 @@
 
 		<javadoc excludepackagenames="uk.ac.ebi.ontocat.examples.*,
 									uk.ac.ebi.ontocat.mediawiki.*,
-									uk.ac.ebi.ontocat.conceptwiki.*"
-		         sourcepath="src"
-		         access="public"
-		         destdir="doc"
-		         author="true"
-		         version="true"
-		         use="true"
-		         windowtitle="OntoCAT"
-		         doctitle="OntoCAT ${version} API Documentation"
-		         bottom="${copyright}"
-		         header="OntoCAT ${version}"
-		         footer="${copyright}">
+									uk.ac.ebi.ontocat.conceptwiki.*" sourcepath="src" access="public" destdir="doc" author="true" version="true" use="true" windowtitle="OntoCAT" doctitle="OntoCAT ${version} API Documentation" bottom="${copyright}" header="OntoCAT ${version}" footer="${copyright}">
 			<classpath refid="test.classpath" />
 		</javadoc>
 
 	</target>
 
-	<target name="dist" depends="javadoc, jar, jar-with-deps">
+	<target name="compile">
+		<javac srcdir="src:test" destdir="bin" nowarn="on">
+			<classpath refid="test.classpath" />
+		</javac>
+	</target>
+
+	<target name="dist" depends="javadoc, jar, jar-with-deps, compile, test">
+
 		<zip destfile="build/${ant.project.name}_v${version}.zip">
 			<zipfileset dir="doc" prefix="docs" />
-			<zipfileset dir="build"
-			            includes="${ant.project.name}_with_deps_v${version}.jar" />
-			<zipfileset dir="build"
-			            includes="${ant.project.name}_v${version}.jar" />
+			<zipfileset dir="build" includes="${ant.project.name}_with_deps_v${version}.jar" />
+			<zipfileset dir="build" includes="${ant.project.name}_v${version}.jar" />
 			<zipfileset dir="build" includes="release_notes.txt" />
 			<zipfileset dir="build" includes="COPYING" />
 			<zipfileset dir="build" includes="COPYING.LESSER" />
@@ -60,64 +53,36 @@
 	</target>
 
 	<target name="jar-with-deps">
-		<jar destfile="build/${ant.project.name}_with_deps_v${version}.jar"
-		     filesetmanifest="mergewithoutmain">
+		<jar destfile="build/${ant.project.name}_with_deps_v${version}.jar" filesetmanifest="mergewithoutmain">
 			<manifest>
-				<attribute name="Main-Class"
-				           value="uk.ac.ebi.ontocat.examples.Example3" />
+				<attribute name="Main-Class" value="uk.ac.ebi.ontocat.examples.Example3" />
 				<attribute name="Class-Path" value="." />
 			</manifest>
 			<fileset dir="bin" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/jargs.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/log4j-1.2.15.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/eclipse/plugins/org.junit4_4.5.0.v20090824/junit.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/eclipse/plugins/org.hamcrest.core_1.1.0.v20090501071000.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/xpp3_min-1.1.4c.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/opencsv-1.8.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/owlapi-bin.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/owlapi-src.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ols-client.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/axis.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/jaxrpc.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/commons-logging-1.1.1.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/commons-discovery-0.2.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/wsdl4j-1.6.2.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/pellet/pellet-owlapi.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/pellet/relaxngDatatype.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/pellet/xsdlib.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ehcache-core-1.7.2/ehcache-core-1.7.2-javadoc.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ehcache-core-1.7.2/ehcache-core-1.7.2-sources.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ehcache-core-1.7.2/ehcache-core-1.7.2.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ehcache-core-1.7.2/lib/slf4j-log4j12-1.5.11.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11-sources.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/commons-lang-2.4.jar" />
-			<zipfileset excludes="META-INF/*.SF"
-			            src="C:/work/workspace/ontoCAT/lib/xstream-1.3.1.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/jargs.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/log4j-1.2.15.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/junit-4.8.1.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/xpp3_min-1.1.4c.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/opencsv-1.8.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/owlapi-bin.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/owlapi-src.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ols-client.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/axis.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/jaxrpc.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-logging-1.1.1.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-discovery-0.2.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/wsdl4j-1.6.2.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/pellet/pellet-owlapi.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/pellet/relaxngDatatype.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/pellet/xsdlib.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2-javadoc.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2-sources.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/lib/slf4j-log4j12-1.5.11.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11-sources.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-lang-2.4.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/xstream-1.3.1.jar" />
 		</jar>
 	</target>
 
@@ -131,10 +96,7 @@
 		<delete dir="${test.reports}" />
 		<mkdir dir="${test.reports}" />
 		<echo>Running junit tests...</echo>
-		<junit fork="yes"
-		       haltonfailure="no"
-		       printSummary="true"
-		       showOutput="false">
+		<junit fork="yes" haltonfailure="no" printSummary="true" showOutput="false">
 			<classpath refid="test.classpath" />
 			<formatter type="plain" usefile="true" />
 			<batchtest fork="yes" todir="${test.reports}">
