fixed a bottleneck in ols.searchOntology as per user's request (see mailing list) removed term.getOnology from testGetTerm as it was slowing down the test fixed depends order in build.xml dist task cleaned-up build directory
git-svn-id: http://www.ontocat.org/svn/trunk@229 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -40,7 +40,7 @@
 		</javac>
 	</target>
 
-	<target name="dist" depends="javadoc, jar, jar-with-deps, compile, test">
+	<target name="dist" depends="compile, test, jar, jar-with-deps, javadoc">
 
 		<zip destfile="build/${ant.project.name}_v${version}.zip">
 			<zipfileset dir="doc" prefix="docs" />
