--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -64,6 +64,7 @@
 				<attribute name="Class-Path" value="." />
 			</manifest>
 			<fileset dir="bin" />
+			<fileset dir="src" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jargs.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/log4j-1.2.15.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/junit-4.8.1.jar" />
@@ -77,9 +78,6 @@
 			<zipfileset excludes="META-INF/*.SF" src="lib/commons-logging-1.1.1.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/commons-discovery-0.2.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/wsdl4j-1.6.2.jar" />
-			<zipfileset excludes="META-INF/*.SF" src="lib/pellet/pellet-owlapi.jar" />
-			<zipfileset excludes="META-INF/*.SF" src="lib/pellet/relaxngDatatype.jar" />
-			<zipfileset excludes="META-INF/*.SF" src="lib/pellet/xsdlib.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2-javadoc.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2-sources.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2.jar" />
@@ -90,6 +88,32 @@
 			<zipfileset excludes="META-INF/*.SF" src="lib/xstream-1.3.1.jar" />
 		</jar>
 	</target>
+	
+	<target name="jar-with-deps-small">
+			<jar destfile="build/${ant.project.name}_with_deps_small_v${version}.jar" filesetmanifest="mergewithoutmain">
+				<manifest>
+					<attribute name="Main-Class" value="uk.ac.ebi.ontocat.examples.Example3" />
+					<attribute name="Class-Path" value="." />
+				</manifest>
+				<fileset dir="bin" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/jargs.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/log4j-1.2.15.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/xpp3_min-1.1.4c.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/opencsv-1.8.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/owlapi-bin.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/ols-client.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/axis.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/jaxrpc.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/commons-logging-1.1.1.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/commons-discovery-0.2.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/wsdl4j-1.6.2.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/ehcache-core-1.7.2/lib/slf4j-log4j12-1.5.11.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/commons-lang-2.4.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/xstream-1.3.1.jar" />
+			</jar>
+		</target>
 
 	<target name="jar">
 		<jar destfile="build/${ant.project.name}_v${version}.jar">
