--- a/ontoCAT-restservice/WebContent/WEB-INF/web.xml
+++ b/ontoCAT-restservice/WebContent/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-	<display-name>ontocat</display-name>
+	<display-name>ontocatrest</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
