--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -8,8 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-1.8.jar"/>
-	<classpathentry kind="lib" path="lib/owlapi-bin.jar"/>
-	<classpathentry kind="lib" path="lib/owlapi-src.jar"/>
 	<classpathentry kind="lib" path="lib/ols-client.jar"/>
 	<classpathentry kind="lib" path="lib/axis.jar"/>
 	<classpathentry kind="lib" path="lib/jaxrpc.jar"/>
@@ -28,5 +26,7 @@
 	<classpathentry kind="lib" path="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/owlapi-3.1.0/owlapi-bin.jar" sourcepath="lib/owlapi-3.1.0/owlapi-src.jar"/>
+	<classpathentry kind="lib" path="lib/owlapi-3.1.0/owlapi-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
