--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -2,7 +2,7 @@
 <project default="dist" name="ontoCAT" basedir=".">
 	<!-- set global properties for this build -->
 	<property name="test.reports" value="reports" />
-	<property name="version" value="0.9.5.3" />
+	<property name="version" value="0.9.6" />
 	<property name="copyright" value="Copyright © 2010 European Bioinformatics 
 		Institute and University of Groningen. Released under LGPLv3." />
 
@@ -77,8 +77,7 @@
 			<zipfileset excludes="META-INF/*.SF" src="lib/junit-4.8.1.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/xpp3_min-1.1.4c.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/opencsv-1.8.jar" />
-			<zipfileset excludes="META-INF/*.SF" src="lib/owlapi-bin.jar" />
-			<zipfileset excludes="META-INF/*.SF" src="lib/owlapi-src.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/owlapi-3.1.0/owlapi-bin.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/ols-client.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/axis.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/jaxrpc.jar" />
@@ -107,7 +106,7 @@
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/log4j-1.2.15.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/xpp3_min-1.1.4c.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/opencsv-1.8.jar" />
-				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/owlapi-bin.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/owlapi-3.1.0/owlapi-bin.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/ols-client.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/axis.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/jaxrpc.jar" />
