Minor changes in pom
git-svn-id: http://www.ontocat.org/svn/trunk@279 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/pom.xml
+++ b/ontoCAT/pom.xml
@@ -10,6 +10,9 @@
   <url>http://www.ontocat.org</url>
 
    <build>
+       <sourceDirectory>src</sourceDirectory>
+       <testSourceDirectory>test</testSourceDirectory>
+       
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -289,6 +292,11 @@
       <artifactId>junit</artifactId>
       <version>4.2</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.2.0</version>
     </dependency>
 
   </dependencies>
