--- a/ontoCAT/pom.xml
+++ b/ontoCAT/pom.xml
@@ -8,37 +8,40 @@
   <version>0.9.6</version>
   <name>ontoCAT</name>
   <url>http://www.ontocat.org</url>
+ 
 
    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>
        
+       
     <plugins>
+        <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.6</version>
+               <configuration>
+                 <skipTests>true</skipTests>
+               </configuration>
+             </plugin>
+        
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+            
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
       </plugin>
-      <plugin>
-        <artifactId>maven-source-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-source</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+      
       <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
             <configuration>
-                <finalName>ontoCAT</finalName>
+        
                 <descriptorRefs>
                     <descriptorRef>jar-with-dependencies</descriptorRef>
                 </descriptorRefs>
+                
             </configuration>
         </plugin>
     </plugins>
@@ -163,66 +166,7 @@
       </snapshots>
     </repository>
   </repositories>
-  <!--<pluginRepositories>
-    <pluginRepository>
-      <id>tony-repo</id>
-      <name>Tonys maven repository</name>
-      <url>http://ebi.ac.uk/~tburdett/maven</url>
-    </pluginRepository>
-  </pluginRepositories>  -->
-
-  <!--<profiles>
-
-    <profile>
-      <id>ebi</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-
-      <modules>
-        <module>zooma-annotation</module>
-        <module>zooma</module>
-        <module>zooma-atlas</module>
-        <module>zooma-service</module>
-        <module>zooma-text</module>
-      </modules>
-
-
-
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <configuration>
-              <finalName>ZOOMA-EBI</finalName>
-              <descriptors>
-                <descriptor>
-                  src/main/assembly/zooma-ebi-assembly.xml
-                </descriptor>
-              </descriptors>
-            </configuration>
-
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-
-    <profile>
-      <id>public</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-
-      <modules>
-        <module>zooma-annotation</module>
-        <module>zooma</module>
-        <module>zooma-service</module>
-        <module>zooma-text</module>
-      </modules>
-    </profile>
-
-  </profiles>-->
+ 
 
   <dependencies>
     <!-- ontocat dependencies -->
