--- a/ontoCAT/pom.xml
+++ b/ontoCAT/pom.xml
@@ -242,6 +242,16 @@
       <artifactId>commons-validator</artifactId>
       <version>1.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>jetty</groupId>
+      <artifactId>org.mortbay.jetty</artifactId>
+      <version>5.1.12</version>       
+    </dependency>
 
   </dependencies>
 
