--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-3.1.0/owlapi-bin.jar" sourcepath="lib/owlapi-3.1.0/owlapi-src.jar"/>
 	<classpathentry kind="lib" path="lib/owlapi-3.1.0/owlapi-src.jar"/>
+	<classpathentry kind="lib" path="lib/commons-validator-1.3.1/commons-validator-1.3.1.jar" sourcepath="C:/Documents and Settings/tomasz/.m2/repository/commons-validator/commons-validator/1.3.1/commons-validator-1.3.1-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
