--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="dist" name="ontoCAT" basedir=".">
+<project default="dist" name="ontocat" basedir=".">
 	<!-- set global properties for this build -->
 	<property name="test.reports" value="reports" />
-	<property name="version" value="0.9.6.1" />
+	<property name="version" value="0.9.6.2" />
 	<property name="copyright" value="Copyright © 2010 European Bioinformatics 
 		Institute and University of Groningen. Released under LGPLv3." />
 
@@ -20,6 +20,8 @@
 			<exclude name="**/AbstractOntologyServiceTest*" />
 			<exclude name="**/MediaWikiOntologyServiceTest*" />
 			<exclude name="**/ZoomaTest*" />
+			<exclude name="**/OntologyBatchTest*" />
+			<exclude name="**/OntologyParserTest*" />
 		</patternset>
 	</fileset>
 
@@ -50,7 +52,7 @@
 	
 	<target name="dist" depends="compile, test-html, jar, jar-with-deps, javadoc">
 
-		<zip destfile="dist/${ant.project.name}_v${version}.zip">
+		<zip destfile="dist/${ant.project.name}-${version}.zip">
 			<zipfileset dir="doc" prefix="docs" />
 			<zipfileset dir="src" prefix="source/src" />
 			<zipfileset dir="test" prefix="source/test" />
@@ -65,7 +67,7 @@
 	</target>
 
 	<target name="jar-with-deps">
-		<jar destfile="dist/${ant.project.name}_with_deps_v${version}.jar" filesetmanifest="mergewithoutmain">
+		<jar destfile="dist/${ant.project.name}-${version}-with-deps.jar" filesetmanifest="mergewithoutmain">
 			<manifest>
 				<attribute name="Main-Class" value="uk.ac.ebi.ontocat.examples.Example3" />
 				<attribute name="Class-Path" value="." />
@@ -96,7 +98,7 @@
 	</target>
 	
 	<target name="jar-with-deps-small">
-			<jar destfile="dist/${ant.project.name}_with_deps_small_v${version}.jar" filesetmanifest="mergewithoutmain">
+			<jar destfile="dist/${ant.project.name}-${version}-with-deps-small.jar" filesetmanifest="mergewithoutmain">
 				<manifest>
 					<attribute name="Main-Class" value="uk.ac.ebi.ontocat.examples.Example3" />
 					<attribute name="Class-Path" value="." />
@@ -122,7 +124,7 @@
 		</target>
 
 	<target name="jar">
-		<jar destfile="dist/${ant.project.name}_v${version}.jar">
+		<jar destfile="dist/${ant.project.name}-${version}.jar">
 			<fileset dir="bin" />
 		</jar>
 	</target>
