added a new proxy that overwrites returned ontology accessions in File Ontology Service a fix in FileOntologyService that prevented it to be reflected by a proxy (extended AbstractOS but not implemented OS inteface)
git-svn-id: http://www.ontocat.org/svn/trunk@298 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -17,11 +17,7 @@
 	<fileset dir="bin">
 		<patternset id="test.sources">
 			<include name="**/*Test.class" />
-			<exclude name="**/AbstractOntologyServiceTest*" />
-			<exclude name="**/MediaWikiOntologyServiceTest*" />
-			<exclude name="**/ZoomaTest*" />
-			<exclude name="**/OntologyBatchTest*" />
-			<exclude name="**/OntologyParserTest*" />
+			<exclude name="**/special/*" />
 		</patternset>
 	</fileset>
 
