--- a/ontoCAT/pom.xml
+++ b/ontoCAT/pom.xml
@@ -21,7 +21,7 @@
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.6</version>
                <configuration>
-                 <skipTests>true</skipTests>
+                 <skipTests>false</skipTests>
                </configuration>
              </plugin>
         
@@ -251,6 +251,11 @@
       <groupId>jetty</groupId>
       <artifactId>org.mortbay.jetty</artifactId>
       <version>5.1.12</version>       
+    </dependency>
+    <dependency>
+      <groupId>oro</groupId>
+      <artifactId>oro</artifactId>
+      <version>2.0.8</version>
     </dependency>
 
   </dependencies>
