added back the test debug setting but commented out for release
git-svn-id: http://www.ontocat.org/svn/trunk@316 f0dfcaea-3b95-4152-9e97-e99b8c58adb7

--- a/ontoCAT/src/log4j.properties
+++ b/ontoCAT/src/log4j.properties
@@ -1,4 +1,10 @@
 log4j.rootLogger=OFF
+
+# need these to debug
+# TODO: find a way to selectively turn on/off via ant/maven
+#log4j.logger.net.sf.ehcache=ERROR, CONSOLE
+#log4j.logger.uk.ac.ebi=DEBUG, CONSOLE
+
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%C{1}] %m%n
