--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -95,6 +95,39 @@
 		</jar>
 	</target>
 	
+	<!-- This uses the custom xstream-gae.jar that works on google app engine-->
+	<target name="jar-with-deps-gae">
+		<jar destfile="dist/${ant.project.name}-${version}-with-deps-gae.jar" filesetmanifest="mergewithoutmain">
+			<manifest>
+				<attribute name="Main-Class" value="uk.ac.ebi.ontocat.examples.Example3" />
+				<attribute name="Class-Path" value="." />
+			</manifest>
+			<fileset dir="bin" />
+			<fileset dir="src" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/jargs.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/log4j-1.2.15.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/junit-4.8.1.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/xpp3_min-1.1.4c.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/opencsv-1.8.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/owlapi-3.1.0/owlapi-bin.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ols-client.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/axis.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/jaxrpc.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-logging-1.1.1.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-discovery-0.2.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/wsdl4j-1.6.2.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2-javadoc.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2-sources.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/ehcache-core-1.7.2.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/lib/slf4j-log4j12-1.5.11.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11-sources.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/ehcache-core-1.7.2/lib/slf4j-api-1.5.11.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-lang-2.4.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/xstream-gae.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/commons-validator-1.3.1/commons-validator-1.3.1.jar" />
+		</jar>
+	</target>
+	
 	<target name="jar-with-deps-small">
 			<jar destfile="dist/${ant.project.name}-${version}-with-deps-small.jar" filesetmanifest="mergewithoutmain">
 				<manifest>
