--- a/ontoCAT/.classpath
+++ b/ontoCAT/.classpath
@@ -114,5 +114,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/HermiT/org.semanticweb.HermiT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
