--- a/ontoCAT/build.xml
+++ b/ontoCAT/build.xml
@@ -2,7 +2,7 @@
 <project default="dist" name="ontocat" basedir=".">
 	<!-- set global properties for this build -->
 	<property name="test.reports" value="reports" />
-	<property name="version" value="0.9.6.3" />
+	<property name="version" value="0.9.7" />
 	<property name="copyright" value="Copyright © 2010 European Bioinformatics 
 		Institute and University of Groningen. Released under LGPLv3." />
 
@@ -46,7 +46,7 @@
 		  </delete>
 	</target>
 	
-	<target name="dist" depends="clean-dist,compile, test-html, jar, jar-with-deps, javadoc">
+	<target name="dist" depends="clean-dist, compile, test-html, jar, jar-with-deps, jar-with-deps-small, javadoc">
 
 		<zip destfile="dist/${ant.project.name}-${version}.zip">
 			<zipfileset dir="doc" prefix="docs" />
@@ -92,6 +92,7 @@
 			<zipfileset excludes="META-INF/*.SF" src="lib/commons-lang-2.4.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/xstream-1.3.1.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/commons-validator-1.3.1/commons-validator-1.3.1.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/HermiT/org.semanticweb.HermiT.jar" />
 		</jar>
 	</target>
 	
@@ -154,6 +155,7 @@
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/commons-lang-2.4.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/xstream-1.3.1.jar" />
 				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/commons-validator-1.3.1/commons-validator-1.3.1.jar" />
+				<zipfileset excludes="META-INF/*.SF,**/*.java" src="lib/HermiT/org.semanticweb.HermiT.jar" />
 			</jar>
 		</target>
 
